Add metrics for machine, jvm startup and process stats.
also fixes flakeyness in publisher tests
Change-Id: I8db31f6933ba2911fba4842f73cee90464a6c9c2